# rusch

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md
.github/workflows/: rust.yml
examples/the-little-schemer/: README.md
src/: envir.rs  errors.rs  eval.rs  io.rs  iter.rs  kanren.rs  lib.rs  list.rs  main.rs  parser.rs  reader.rs  scheme.rs  types.rs
src/scheme/: numbers.rs  procedures.rs  special_forms.rs  tests.rs  utils.rs
