[package]
name = "rusch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.optimized]
# see: https://doc.rust-lang.org/rustc/codegen-options/index.html
inherits = "release"
strip = "symbols"
lto = true
